--- a/topics/customer_and_account_data.yml
+++ b/topics/customer_and_account_data.yml
@@ -1,19 +1,22 @@
 type: topic
-label: Customer and Account Data
 base_view: customer
 model_name: peoplepulse_model
-description: This dataset represents information about individuals and their associated
-  accounts in a product ecosystem. The 'customer' view contains details about individual
-  users, such as their unique IDs, contact information, and name. The 'account' view
-  describes the companies responsible for payments, including contact details, industry,
-  and contractual information. Together, these views offer insights into customer
-  behavior, account management, and business relationships, enabling assessment of
-  user engagement and account performance.
-zoe_description: 'This dataset includes two primary views: ''customer,'' detailing
-  individual user information like ID, phone, and contact details, and ''account,''
-  which provides company-related data like contact email, account name, location,
-  industry, and contract details. Use this data to analyze user demographics and account
-  metrics, aiding in understanding customer engagement and business account management.'
+label: Customer and Account Data
+description: >-
+  This dataset represents information about individuals and their associated
+  accounts in a product ecosystem. The 'customer' view contains details about
+  individual users, such as their unique IDs, contact information, and name. The
+  'account' view describes the companies responsible for payments, including
+  contact details, industry, and contractual information. Together, these views
+  offer insights into customer behavior, account management, and business
+  relationships, enabling assessment of user engagement and account performance.
+zoe_description: >-
+  This dataset includes two primary views: 'customer,' detailing individual user
+  information like ID, phone, and contact details, and 'account,' which provides
+  company-related data like contact email, account name, location, industry, and
+  contract details. Use this data to analyze user demographics and account
+  metrics, aiding in understanding customer engagement and business account
+  management.
 hidden: false
 views:
   account:
