--- a/topics/customer_feedback_and_interaction_data.yml
+++ b/topics/customer_feedback_and_interaction_data.yml
@@ -1,21 +1,25 @@
 type: topic
-label: Customer Feedback and Interaction Data
 base_view: nps_survey
 model_name: peoplepulse_model
-description: This data model integrates customer feedback from NPS surveys, customer
-  details, event interactions with the product, and account information. The NPS survey
-  captures customer feedback through scores and comments, tracking individual customer
-  IDs. The 'customer' view provides detailed user information related to individuals
-  using the product, rather than the purchasing companies, highlighting customer names,
-  contact info, and demographics. The 'events' view logs user interactions with the
-  product across different devices and browsers, linking activities to unique user
-  IDs and known customers. Lastly, the 'account' view contains information about the
+label: Customer Feedback and Interaction Data
+description: >-
+  This data model integrates customer feedback from NPS surveys, customer
+  details, event interactions with the product, and account information. The NPS
+  survey captures customer feedback through scores and comments, tracking
+  individual customer IDs. The 'customer' view provides detailed user
+  information related to individuals using the product, rather than the
+  purchasing companies, highlighting customer names, contact info, and
+  demographics. The 'events' view logs user interactions with the product across
+  different devices and browsers, linking activities to unique user IDs and
+  known customers. Lastly, the 'account' view contains information about the
   purchasing companies, including contact details, industry, and account status.
-zoe_description: This dataset covers customer feedback via NPS surveys, detailed user
-  information, interactions with the product, and company account details. Use the
-  'nps_survey' for feedback and scores, the 'customer' for personal user info, 'events'
-  for product interaction data, and 'account' for company-level insights. This structure
-  supports a comprehensive understanding of user product engagement and feedback.
+zoe_description: >-
+  This dataset covers customer feedback via NPS surveys, detailed user
+  information, interactions with the product, and company account details. Use
+  the 'nps_survey' for feedback and scores, the 'customer' for personal user
+  info, 'events' for product interaction data, and 'account' for company-level
+  insights. This structure supports a comprehensive understanding of user
+  product engagement and feedback.
 hidden: false
 views:
   customer:
