--- a/topics/customer_and_account_data.yml
+++ b/topics/customer_and_account_data.yml
@@ -1,6 +1,6 @@
 type: topic
 label: Customer and Account Data
-base_view: customer
+base_view: Customer
 model_name: peoplepulse_model
 description: This dataset represents information about individuals and their associated
   accounts in a product ecosystem. The 'customer' view contains details about individual
