--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -33,3 +33,9 @@ mappings:
       The marketing campaign that the customer came through before entering the
       pipeline.
     group_label: Acquisition
+relationships:
+  - from_table: candy_shop_orders
+    join_table: candy_shop_order_items
+    relationship: many_to_one
+    join_type: left_outer
+    sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
