--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -36,6 +36,6 @@ mappings:
 relationships:
   - from_table: candy_shop_orders
     join_table: candy_shop_order_items
-    relationship: many_to_one
+    relationship: one_to_many
     join_type: left_outer
     sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
