--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -39,3 +39,8 @@ relationships:
     relationship: one_to_many
     join_type: left_outer
     sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
+  - from_table: candy_shop_orders
+    join_table: left_outer
+    join_type: left_outer
+    relationship: many_to_one
+    sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
