--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -74,3 +74,8 @@ relationships:
     join_type: candy_shop_customers
     relationship: many_to_one
     sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
+  - from_table: candy_shop_orders
+    join_table: candy_shop_customers
+    join_type: left_outer
+    relationship: many_to_one
+    sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
