--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -84,3 +84,8 @@ relationships:
     join_type: left_outer
     relationship: one_to_many
     sql_on: ${candy_shop_products.product_id}=${candy_shop_order_items.product_id}
+  - from_table: candy_shop_suppliers
+    join_table: candy_shop_products
+    join_type: left_outer
+    relationship: one_to_many
+    sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_products.supplier_id}
