--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -39,3 +39,8 @@ relationships:
     join_type: left_outer
     relationship: one_to_many
     sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
+  - from_table: candy_shop_order_items
+    join_table: candy_shop_products
+    join_type: left_outer
+    relationship: many_to_one
+    sql_on: ${candy_shop_order_items.product_id}=${candy_shop_products.product_id}
