--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -49,3 +49,8 @@ relationships:
     join_type: left_outer
     relationship: many_to_one
     sql_on: ${candy_shop_products.supplier_id}=${candy_shop_suppliers.supplier_id}
+  - from_table: candy_shop_orders
+    join_table: candy_shop_customers
+    join_type: left_outer
+    relationship: many_to_one
+    sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
