--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -8,9 +8,4 @@ access_grants:
     user_attribute: My Thing
     allowed_values:
       - Hey
-relationships:
-  - from_table: candy_shop_orders
-    join_table: candy_shop_customers
-    join_type: left_outer
-    relationship: many_to_one
-    sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
+relationships: []
