--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -14,3 +14,8 @@ relationships:
     join_type: left_outer
     relationship: many_to_one
     sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
+  - from_table: candy_shop_orders
+    join_table: candy_shop_order_items
+    join_type: left_outer
+    relationship: one_to_many
+    sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
