--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -11,7 +11,7 @@ access_grants:
 relationships:
   - from_table: candy_shop_orders
     join_table: candy_shop_customers
-    join_type: left_outer
+    join_type: inner
     relationship: many_to_one
     sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
   - from_table: candy_shop_orders
