--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -26,6 +26,6 @@ relationships:
     sql_on: ${candy_shop_products.supplier_id}=${candy_shop_suppliers.supplier_id}
   - from_table: candy_shop_customers
     join_table: candy_shop_orders
-    join_type: left_outer
+    join_type: inner
     relationship: one_to_many
     sql_on: ${candy_shop_customers.customer_id}=${candy_shop_orders.customer_id}
