Zenlytic data model update

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -49,7 +49,7 @@ fields:
   - name: contact_name
     field_type: dimension
     type: string
-    label: Contact Name
+    label: Contact Name NJM
     searchable: true
     sql: ${TABLE}."CONTACT_NAME" 8908988hhh
 
