--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -167,4 +167,7 @@ fields:
     field_type: measure
     type: average
     description: The average probability to close across all opportunities.
+    canon_date: sales_pipeline.expected_close_date
+    primary_key: false
     sql: ${probability_to_close}
+    value_format_name: decimal_0
