--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -107,6 +107,9 @@ fields:
     field_type: measure
     type: sum
     description: The sum of the deal sizes for all opportunities.
+    canon_date: sales_pipeline.expected_close_date
+    label: Total Deal Size 2
+    primary_key: false
     sql: ${deal_size}
     value_format_name: usd
 
