--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -116,6 +116,8 @@ fields:
     field_type: measure
     type: average
     description: The average size of deals across all opportunities.
+    canon_date: sales_pipeline.expected_close_date
+    primary_key: false
     sql: ${deal_size}
     value_format_name: usd
 
