Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -142,6 +142,7 @@ fields:
     type: sum
     description: The total dollars for deals that have been won (closed and successful).
     canon_date: sales_pipeline.expected_close_date
+    label: testing
     primary_key: false
     sql: case when ${stage}='Closed Won' then ${deal_size} end
     value_format_name: usd
