--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -70,7 +70,10 @@ fields:
   - name: renewal_date
     field_type: dimension_group
     type: time
+    description: Reveal date description
     datatype: timestamp
+    primary_key: false
+    sql: ${TABLE}."CONTRACT_END_DATE"
     timeframes:
       - raw
       - date
@@ -81,7 +84,6 @@ fields:
       - month_of_year
       - quarter
       - year
-    sql: ${TABLE}."CONTRACT_END_DATE"
 
   - name: contract_start_date
     field_type: dimension_group
