--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -70,8 +70,9 @@ fields:
   - name: renewal_date
     field_type: dimension_group
     type: time
-    description: Reveal date description
+    description: Reveal date description testing
     datatype: timestamp
+    primary_key: false
     sql: ${TABLE}."CONTRACT_END_DATE"
     timeframes:
       - raw
