Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -64,8 +64,9 @@ fields:
   - name: industry
     field_type: dimension
     type: string
-    sql: ${TABLE}."INDUSTRY"
+    description: Industry description
     searchable: true
+    sql: ${TABLE}."INDUSTRY"
 
   - name: renewal_date
     field_type: dimension_group
