--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -64,7 +64,7 @@ fields:
   - name: industry
     field_type: dimension
     type: string
-    description: Industry description
+    description: Industry description testing
     searchable: true
     sql: ${TABLE}."INDUSTRY"
 
