Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -116,6 +116,7 @@ fields:
   - name: number_of_accounts
     field_type: measure
     type: count_distinct
-    description: The total number of unique accounts testing
+    description: The total number of unique accounts testing testing
+    primary_key: false
     sql: ${account_id}
     value_format_name: decimal_0
