Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -71,7 +71,7 @@ fields:
   - name: renewal_date
     field_type: dimension_group
     type: time
-    description: Reveal date description testing
+    description: Reveal date description testing 2
     datatype: timestamp
     sql: ${TABLE}."CONTRACT_END_DATE"
     timeframes:
