Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -65,9 +65,7 @@ fields:
     field_type: dimension
     type: string
     description: Industry description testing 2
-    hidden: true
-    primary_key: true
-    searchable: false
+    searchable: true
     sql: ${TABLE}."INDUSTRY"
 
   - name: renewal_date
