Zenlytic data model update - Nick Morrow

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -117,5 +117,6 @@ fields:
     field_type: measure
     type: count_distinct
     description: The total number of unique accounts testing testing 2
+    hidden: true
     sql: ${account_id}
     value_format_name: decimal_0
