Zenlytic data model update - Paul Blankley

--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -1,11 +1,6 @@
 name: peoplepulse_model
-connection: demo
+connection: internal
 type: model
 version: 1
-fiscal_month_offset: 1
-access_grants:
-  - name: exec_only
-    user_attribute: My Thing
-    allowed_values:
-      - Hey
+
 
