--- a/views/event_records_view.yml
+++ b/views/event_records_view.yml
@@ -29,12 +29,6 @@ fields:
   sql: ${TABLE}."conversation_thread_id"
   searchable: false
 
-- name: message_id
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."message_id"
-  searchable: false
-
 - name: entity_id
   field_type: dimension
   type: string
@@ -114,7 +108,14 @@ fields:
   - year
   sql: ${TABLE}."created_date"
 
-
+- name: number_of_messages
+  field_type: measure
+  type: count_distinct
+  sql: ->
+    CASE
+      WHEN event_records."record_type" IN ('user_message', 'assistant')
+      THEN event_records."id"
+    END
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
 # in your table.
