Zenlytic data model update - Paul Blankley

--- a/views/event_records_view.yml
+++ b/views/event_records_view.yml
@@ -45,7 +45,7 @@ fields:
   field_type: dimension
   type: string
   sql: ${TABLE}."record_type"
-  searchable: false
+  searchable: true
 
 - name: tool_name
   field_type: dimension
@@ -111,11 +111,7 @@ fields:
 - name: number_of_messages
   field_type: measure
   type: count_distinct
-  sql: ->
-    CASE
-      WHEN event_records."record_type" IN ('user_message', 'assistant')
-      THEN event_records."id"
-    END
+  sql: CASE WHEN event_records."record_type" IN ('user_message', 'assistant') THEN event_records."id" END
 # To help you get started with defining fields, we've included a quick guide which you can delete at any time.
 # The following keys are required for all fields. All the fields above have been created based on the columns
 # in your table.
