--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -113,3 +113,9 @@ fields:
     type: count_distinct
     description: The total number of unique accounts
     sql: ${account_id}
+
+  - name: number_of_accounts2
+    field_type: measure
+    type: count_distinct
+    description: The total number of unique accounts
+    sql: ${account_id}
