--- a/topics/customer_and_account_data.yml
+++ b/topics/customer_and_account_data.yml
@@ -7,7 +7,7 @@ description: >-
   accounts in a product ecosystem. The 'customer' view contains details about
   individual users, such as their unique IDs, contact information, and name. The
   'account' view describes the companies responsible for payments, including
-  contact details, industry, and contractual information. Together, these views
+  contact  industry, and contractual information. Together, these views
   offer insights into customer behavior, account management, and business
   relationships, enabling assessment of user engagement and account performance.
 zoe_description: >-
