Zenlytic data model update

--- a/topics/customer_and_account_data.yml
+++ b/topics/customer_and_account_data.yml
@@ -3,7 +3,7 @@ base_view: customer
 model_name: peoplepulse_model
 label: Customer and Account Data
 description: >-
-  This dataset represents information about individuals and their associated
+  information about individuals and their associated
   accounts in a product ecosystem. The 'customer' view contains details about
   individual users, such as their unique IDs, contact information, and name. The
   'account' view describes the companies responsible for payments, including
