Zenlytic data model update - Paul Blankley

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -9,6 +9,11 @@ identifiers:
   - name: account_id
     type: primary
     sql: ${account_id}
+
+always_filter:
+  - field: account.account_id
+    value: -NULL
+
 fields:
   - name: account_id
     field_type: dimension
